Apps/sqllitebrowser/deployment.yaml
# yaml-language-server: $schema=https://json.schemastore.org/yamllint.json
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sqlitebrowser
  name: sqlitebrowser
  namespace: sqlitebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlitebrowser
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sqlitebrowser
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/MDT
          image: lscr.io/linuxserver/sqlitebrowser:latest
          name: sqlitebrowser
          ports:
            - containerPort: 3000
              protocol: TCP
            - containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sqlitebrowser-config
      restartPolicy: Always
      volumes:
        - name: sqlitebrowser-config
          persistentVolumeClaim:
            claimName: sqlitebrowser-config
